--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -7,30 +7,31 @@
 		<title>Essay Grader Admin</title>
 		<script src="https://unpkg.com/htmx.org@1.9.10"></script>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kimeiga/bahunya/dist/bahunya.min.css">
-		<style>
-			img {
-				height:40px;
-				margin:0 auto
-			}
-			grid {
-				display: grid;
-				grid-template-columns: 1fr 1fr 1fr;
-			}
-		</style>
-
+		<link href="/css/style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<h1>Student Scores</h1>
+		<h4>Shows student name, score, and click on a student to view their essay</h4>
 		<grid>
 		<% for (var i = 0; i < locals.json.length; i++) { %>
-			<article>
+			<a class="button" href="#popup"><article>
 			<% if(json[i]['score'] > 83) { %>
-				<h4 style="color:lightgreen;"><%= json[i]['name'] %> got a <%= json[i]['score'] %>%</h4>
+				<h4 style="color:lightgreen;"><%= json[i]['name'] %>: <%= json[i]['score'] %>%</h4>
 			<% } else { %>
-				<h4 style="color:red;"><%= json[i]['name'] %> got a <%= json[i]['score'] %>%</h4>
+				<h4 style="color:red;"><%= json[i]['name'] %>: <%= json[i]['score'] %>%</h4>
 			<% } %>
-			</article>
+			</article></a>
 		<% } %>
+
+		<div id="popup2" class="overlay">
+			<a class="cancel" href="#"></a>
+			<div class="popup">
+				<h2>Essay</h2>
+				<div class="content">
+					<p><%= json[i]['text'] %></p>
+				</div>
+			</div>
+		</div>
 		</grid>
 	</body>
 </html>
