--- a/27neelk-essay-grader/public/css/style.css
+++ b/27neelk-essay-grader/public/css/style.css
@@ -3,11 +3,6 @@ img {
 	margin:0 auto
 }
 
-p {
-  max-height: 150px;
-  overflow: scroll;
-}
-
 table {
   max-height: 300px;
   overflow: scroll;
@@ -20,13 +15,6 @@ grid {
 
 /* popup: */
 #wrapper {
-	width: 100px;
-	margin: 0 auto;
-	background: #fff;
-	padding: 20px;
-	border: 10px solid #aaa;
-	border-radius: 15px;
-	background-clip: padding-box;
 	text-align: center;
 }
 .overlay {
@@ -35,18 +23,16 @@ grid {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	background: rgba(0, 0, 0, 0.5);
 	transition: opacity 200ms;
 	visibility: hidden;
 	opacity: 0;
 }
-.overlay.light {
-	background: rgba(255, 255, 255, 0.5);
-}
 .overlay .cancel {
-	position: absolute;
+	position: fixed;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
 	width: 100%;
-	height: 100%;
 	cursor: default;
 }
 .overlay:target {
@@ -56,20 +42,11 @@ grid {
 .popup {
 	margin: 75px auto;
 	padding: 20px;
-	background: #fff;
+	background: #000;
 	border: 1px solid #666;
-	width: 300px;
+	width: 70%;
 	box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
 	position: relative;
-}
-.light .popup {
-	border-color: #aaa;
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
-}
-.popup h2 {
-	margin-top: 0;
-	color: #666;
-	font-family: "Trebuchet MS", Tahoma, Arial, sans-serif;
 }
 .popup .close {
 	position: absolute;
@@ -88,12 +65,16 @@ grid {
 	opacity: 1;
 }
 .popup .content {
-	max-height: 400px;
+	max-height: 100%;
 	overflow: auto;
 }
 .popup p {
+	max-height: 100%;
 	margin: 0 0 1em;
 }
 .popup p:last-child {
 	margin: 0;
+}
+.popup h2 {
+	margin: 0 0 1em;
 }
